# aimy

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  pca9685.py  setup.py  udp_reciever.py
arduino/MPU6050/: MPU6050.ino
launch/: absolut diferent method.py  aimy.launch  ardu.launch  camera_streaming.launch  facedetect.py  flaskservo.py  lol.py  mpu2.py  mpu3.py  mpu6050_simpletest2.py  mpuros.ino  mpurospokus.py  multicameras.py  object detection.py  panoramadual.py  picam.py  picamera_node.py  picamopencv.py  picamtest.py  py-srf05exampl.py  rpi_camera_surveillance_system.py  test.launch  test1.launch  udp_pan-tilt_reciever.py  usb.py  usb2.py  usb_camera_node.py  usbcamera.py  usbcamweb.py
src/aimy/: mpu6050_simpletest1.py  mpu6050_simpletest2.py
