<?xml version="1.0"?>
<package format="2">
  <name>aimy</name>
  <version>1.0.0</version>
  <description>Aimy package</description>
  <maintainer email="dedavion@gmail.com">Kenny Mechanik</maintainer>
  <license>BSD</license>

  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>i2cpwm_board</build_depend>
  <build_depend>raspicam_node</build_depend>
  <build_depend>rosserial_python</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosservice</build_depend>
  <build_depend>spot_micro_motion_cmd</build_depend>
  <build_depend>usb_cam</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <build_export_depend>i2cpwm_board</build_export_depend>
  <build_export_depend>raspicam_node</build_export_depend>
  <build_export_depend>rosserial_python</build_export_depend>
  <build_export_depend>rosservice</build_export_depend>
  <build_export_depend>spot_micro_motion_cmd</build_export_depend>
  <build_export_depend>usb_cam</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  
  <exec_depend>i2cpwm_board</exec_depend>
  <exec_depend>raspicam_node</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>rosservice</exec_depend>
  <exec_depend>spot_micro_motion_cmd</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

 
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  <run_depend>serial</run_depend>
  <run_depend>std_msgs</run_depend>
  </export>
</package>
